# file_organizer

./: .gitignore  AGENTS.md  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  universal-binary.yml
features/: collisions.feature  packaging.feature
rust/: Cargo.toml  REPORT.md  bench_results.json  build_endpoints.sh  diff_check.sh  gen_listing.py  gen_report.py  report.html
rust/ape/: build-ape.sh  driver.c
rust/bench/: Cargo.toml
rust/bench/src/: lib.rs  main.rs
rust/bench_c/: main.c
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/cli/tests/: features_augmented.rs  features_original.rs
rust/cli/tests/support/: mod.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/features_augmented/: classification.feature  collisions.feature  edge_behaviors.feature  input_validation.feature  move_folders.feature  report.feature  undo.feature
rust/features_original/: dry_run.feature  keep_structure.feature  recursive.feature
rust/reactor/: Cargo.toml
rust/reactor/src/: framing.rs  lib.rs
src/file_organizer/: __init__.py  __main__.py  cli.py  organizer.py  report.py  undo.py
tests/: test_cli.py  test_organizer.py  test_packaging.py  test_report.py  test_undo.py
tests/step_defs/: test_features.py
