[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer"
version = "0.2.0"
description = "CLI that organizes a folder's top-level files into extension-based subfolders"
requires-python = ">=3.10"

[project.scripts]
file-organizer = "file_organizer.cli:entry"

[project.optional-dependencies]
dev = ["pytest", "pytest-bdd", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=file_organizer --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = ["*/__main__.py"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["file_organizer"]
