[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "organize-by-extension"
version = "0.5.0"
description = "CLI that organizes a folder's files into extension-based subfolders, with dry-run, recursive mode, and full undo"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "linusho123" }]
keywords = ["files", "organize", "folders", "extensions", "cli", "tidy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/linusho123/file_organizer"
Repository = "https://github.com/linusho123/file_organizer"
Issues = "https://github.com/linusho123/file_organizer/issues"

[project.scripts]
file-organizer = "file_organizer.cli:entry"

[project.optional-dependencies]
dev = ["pytest", "pytest-bdd", "pytest-cov", "ruff", "build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=file_organizer --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = ["*/__main__.py"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# The rust/ tree is a separate compiler-endpoint experiment (its own toolchain);
# its helper scripts are not part of this package's lint gate.
extend-exclude = ["rust"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["file_organizer"]
