[workspace]
resolver = "2"
members = ["core", "cli", "bench", "reactor"]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

# Small, fast release binaries — relevant to the cold-start / size benchmark.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
