[package]
name = "file-organizer-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native CLI front-end for the file organizer (real filesystem I/O)."

[[bin]]
name = "file-organizer"
path = "src/main.rs"

[dependencies]
file-organizer-core = { path = "../core" }
file-organizer-reactor = { path = "../reactor" }

[dev-dependencies]
# Published framework, so CI and other machines build without a local checkout.
# To test against a local in-development copy, override with a gitignored
# .cargo/config.toml patch (see AGENTS.md).
gherkin-cargo-test = "0.2"

# BDD acceptance layer: the Gherkin features run through gherkin-cargo-test,
# each set against the same native binary.
[[test]]
name = "features_original"
harness = false

[[test]]
name = "features_augmented"
harness = false
